syntax = "proto3";
package pb;
option java_multiple_files = true;
option java_package = "com.demo.grpc.rangechunker";
option java_outer_classname = "FileRangeChunker";

service RangeChunker {
  // 客户端单线程下载
  rpc Range(RangeRequest) returns (RangeChunkResponse) {}

  // 客户端多线程下载
  rpc GetFileSize(FileSizeRequest) returns (FileSizeResponse){}
  rpc RangeRegion(RangeRegionRequest) returns (stream RangeRegionResponse){}
}

message RangeRequest {
  string fileName = 1;
  int64 position = 2;
}

message RangeChunkResponse {
  bytes chunk = 1;
  int32 code = 2;
  int64 nextposition = 3;
}

// 客户端多线程下载
message FileSizeRequest{
  string fileName = 1;
}

message FileSizeResponse{
  int32 size = 1;
}

message RangeRegionRequest{
  string fileName = 1;
  int32 start = 2;
  int32 end = 3;
}

message RangeRegionResponse{
  bytes chunk = 1;
}
